# rust_proxy

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RICH_INTEGRATION_PLAN.md  UPGRADE_LOG.md  claude-upgrade-progress.json  rust_proxy.env.example  rust_proxy.service
.beads/: issues.jsonl
.github/workflows/: ci.yml
src/: config.rs  dns.rs  error.rs  health.rs  ip_ranges.rs  iptables.rs  load_balancer.rs  main.rs  metrics.rs  metrics_server.rs  proxy.rs  state.rs  util.rs  validation.rs  watcher.rs
src/output/: formatters.rs  mod.rs  theme.rs  widgets.rs
tests/: e2e.rs
tests/common/: assertions.rs  fixtures.rs  mock_proxy.rs  mod.rs
tests/e2e/: basic_operations.rs  load_balancing.rs
