[package]
name = "rust_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
directories = "6.0"
futures = "0.3"
inquire = "0.9"
libc = "0.2"
owo-colors = "4.1"
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.20"
tokio = { version = "1.35", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

# Rich terminal output (Python rich port)
rich_rust = { path = "../rich_rust" }

[dev-dependencies]
tempfile = "3.17"
